cairo (1.15.8-3) UNRELEASED; urgency=medium

  * Update Vcs fields and gbp.conf for Debian GNOME team conventions

 -- Jeremy Bicha <jbicha@debian.org>  Thu, 21 Dec 2017 13:02:03 -0500

cairo (1.15.8-2) unstable; urgency=medium

  * Team upload.
  * Upload to unstable

 -- Laurent Bigonville <bigon@debian.org>  Wed, 25 Oct 2017 15:08:05 +0200

cairo (1.15.8-1) experimental; urgency=medium

  * Team upload.
  * New upstream snapshot release (LP: #1598589)
    - debian/libcairo2.symbols: Add newly exported symbols
  * Bump Standards-Version to 4.1.1 (no further changes)

 -- Laurent Bigonville <bigon@debian.org>  Tue, 17 Oct 2017 18:21:16 +0200

cairo (1.14.10-1) unstable; urgency=medium

  * Team upload.
  * New upstream version 1.14.10

 -- Andreas Henriksson <andreas@fatal.se>  Sat, 01 Jul 2017 12:02:13 +0200

cairo (1.14.8-1) unstable; urgency=medium

  * Acknowledge NMU, thanks Salvatore.
  * New upstream release.
  * Switch URLs to https.
  * Switch to -dbgsym packages.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Wed, 14 Dec 2016 00:13:33 +0100

cairo (1.14.6-1.1) unstable; urgency=medium

  * Non-maintainer upload.
  * CVE-2016-9082: DoS attack based on using SVG to generate invalid pointers
    from a _cairo_image_surface in write_png.  (Closes: #842289)

 -- Salvatore Bonaccorso <carnil@debian.org>  Sun, 30 Oct 2016 13:25:37 +0100

cairo (1.14.6-1) unstable; urgency=medium

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Sat, 09 Jan 2016 22:36:29 +0100

cairo (1.14.4-1) unstable; urgency=medium

  * New upstream release.
  * Refresh debian/patches/06_hurd-map-noreserve.patch.
  * Drop obsolete debian/libcairo2.install.opt file, we no longer support
    building an optimized flavor.
  * Drop obsolete XS-Testsuite field. This is no longer necessary with recent
    versions of dpkg.
  * Use https:// for Vcs-Browser.

 -- Michael Biebl <biebl@debian.org>  Fri, 30 Oct 2015 09:15:44 +0100

cairo (1.14.2-2) unstable; urgency=medium
