@@ -1,6 +1,7 @@
 cairo (1.15.8-3) UNRELEASED; urgency=medium
 
   * Update Vcs fields and gbp.conf for Debian GNOME team conventions
+  * Bump debhelper compat to 11
 
  -- Jeremy Bicha <jbicha@debian.org>  Thu, 21 Dec 2017 13:02:03 -0500
 
